--- a/style.css
+++ b/style.css
@@ -11,15 +11,32 @@ html{
 }
 
 body{ 
-    background: #080808;
+    background: #061d36;
     color: #fff;
+}
+
+#canvas{
+    padding: 0;
+    margin: auto;
+    display: block;
+    width: 800px;
+    height: 600px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+#welcome{
+    text-align: center;
 }
 
 #header{
 
     width: 100%;
     height: 100vh;
-    background-image: url(img/fondoo.jpg);
+    background-image: url(img/MAII_Backgrounds_hexagonal-wave.webp);
     background-size: cover;
     background-position: center;
 
@@ -37,7 +54,7 @@ nav{
     /*me tiro el menu todo hacia la esquina superior derecha*/
 }
 
-.logo{
+#logo{
     width: 140px;
 }
 
@@ -61,7 +78,7 @@ nav ul li a::after{
     content: '';
     width: 0; /*linea de color escondida*/
     height: 3px;
-    background: #1b914c;
+    background: #12c2c2;
     position: absolute; /*por esto, arriba en nav ul li a puse relative*/
     left: 0;
     bottom:-6px;
@@ -85,7 +102,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #1b914c;
+    color: #12c2c2;
 }
 /*----------------about-----------------*/
 #about{
@@ -132,7 +149,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0; /*hidden*/
     height: 3px;
-    background: #1b914c;
+    background: #12c2c2;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -146,7 +163,7 @@ nav ul li a:hover::after{
     margin: 10px 0; /*top and botton, left and right*/
 }
 .tab-contents ul li span{
-    color: #247a48;
+    color: #12c2c2;
     font-size: 14px;
 }
 .tab-contents{
@@ -157,17 +174,17 @@ nav ul li a:hover::after{
 }
 
 /*---------------services--------------*/
-#services{
+#pet-projects{
     padding:  30px 0; /*top and bottom, left and right*/
 }
 
-.services-list{
+.pet-projects-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+.pet-projects-list div{
     background: #262626;
     padding: 40px;
     font-size: 13px;
@@ -175,24 +192,24 @@ nav ul li a:hover::after{
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s; /*degrade cuando pasa el puntero, va de la mano con la transicion sobre y*/
 }
-.services-list div i{
+.pet-projects-list div i{
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div i h2{
+.pet-projects-list div i h2{
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.services-list div a{
+.pet-projects-list div a{
     text-decoration: none;
     color:#fff;
     font-size: 20px;
     margin-top: 20px;
     display: inline-block;
 }
-.services-list div:hover{ /*las cajitas van a tener una transicion de degrade y movimiento hacia arriba*/
-    background: #1b914c;
+.pet-projects-list div:hover{ /*las cajitas van a tener una transicion de degrade y movimiento hacia arriba*/
+    background: #12c2c2;
     transform: translateY(-10px); /*it will move the box*/
 }
 
@@ -225,7 +242,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0; /*hidden*/
-    background: linear-gradient(rgba(0,0,0,0.6), #1b914c); /*primer color: negro, 60% opacity*/
+    background: linear-gradient(rgba(0,0,0,0.6), #12c2c2); /*primer color: negro, 60% opacity*/
     border-radius: 10px;
     position: absolute; /*para que el texto se despliegue sobre la imagen tenemos que poner position absolute*/
     left: 0;
@@ -248,7 +265,7 @@ nav ul li a:hover::after{
 }
 .layer a{
     margin-top: 20px;
-    color: #1b914c;
+    color: #12c2c2;
     text-decoration: none;
     font-size: 10px;
     line-height: 60px;
@@ -270,7 +287,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto; /*top and bottom, left and right*/
     width: fit-content;
-    border: 1px solid #1b914c;
+    border: 1px solid #12c2c2;
     padding: 14px 50px; /*espacio adentro del boton*/
     border-radius: 6px;
     text-decoration: none;
@@ -278,7 +295,7 @@ nav ul li a:hover::after{
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #1b914c;
+    background: #12c2c2;
 }
 /*-----------------contact-------------------*/
 .contact-left{
@@ -292,7 +309,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #1b914c;
+    color: #12c2c2;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -309,13 +326,13 @@ nav ul li a:hover::after{
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color:#1b914c;
+    color:#12c2c2;
     transform: translateY(-5px);
 }
 
 .btn.btn2{ /*dowload CV*/
     display: inline-block;
-    background: #1b914c;
+    background: #12c2c2;
 }
 
 .contact-right form{
@@ -349,7 +366,7 @@ form .btn2{
     margin-top: 20px;
 }
 .copyright i{
-    color:#1b914c;
+    color:#12c2c2;
 }
 
 /*-------------------css for small screens-----------------*/
@@ -375,7 +392,7 @@ nav .fas{
     }
     /*menu hamburguesa - ARREGLAR*/
     nav ul{ 
-        background:#1b914c;
+        background:#12c2c2;
         position: fixed;
         top: 0;
         right: -200px; /*hidden the side navigation bar*/
@@ -426,7 +443,7 @@ nav .fas{
 }
 /*MSG SUCCESSFULLY!*/
 #msg{
-    color: #61b752;
+    color: #12c2c2;
     margin-top: -40px;
     display: block;
 }
